--- a/css/layout.css
+++ b/css/layout.css
@@ -971,7 +971,7 @@ footer .social-links li {
     margin: 0;
     padding: 0;
     margin-left: 42px;
-    color: #F06000;
+    color: #00a8f0;
 }
 
 footer .social-links li:first-child { margin-left: 0; }
