--- a/css/layout.css
+++ b/css/layout.css
@@ -421,7 +421,7 @@ ul#nav li.current a { color: #0080f0; }
    letter-spacing: 1px;
    text-align: center;
    margin-bottom: 48px;
-   color: #95A3A3;
+   color: #545454;
 }
 
 /* Portfolio Content */
@@ -464,10 +464,10 @@ ul#nav li.current a { color: #0080f0; }
 .portfolio-item .item-wrap .link-icon {
    display: block;
    color: #fff;
-   height: 30px;
-   width: 30px;
+   height: 100px;
+   width: 100px;
    font-size: 18px;
-   line-height: 30px;
+   line-height: 10px;
    text-align: center;
 
    opacity: 0;
@@ -486,9 +486,11 @@ ul#nav li.current a { color: #0080f0; }
    margin-top: -15px;
 }
 .portfolio-item .item-wrap img {
-   vertical-align: bottom;
+
+   width: 100%;
+   height: 100%;
 }
-.portfolio-item .portfolio-item-meta { padding: 18px }
+.portfolio-item .portfolio-item-meta { padding: 8px }
 .portfolio-item .portfolio-item-meta h5 {
    font: 14px/21px 'opensans-bold', sans-serif;
    color: #fff;
@@ -518,7 +520,7 @@ ul#nav li.current a { color: #0080f0; }
 	position: relative;
 	margin: 0 auto;
 }
-.popup-modal .description-box { padding: 12px 36px 18px 36px; }
+.popup-modal .description-box { padding: 50px 36px 18px 36px; }
 .popup-modal .description-box h4 {
    font: 15px/24px 'opensans-bold', sans-serif;
 	margin-bottom: 12px;
@@ -541,7 +543,7 @@ ul#nav li.current a { color: #0080f0; }
    margin-right: 8px;
 }
 .popup-modal .link-box {
-   padding: 18px 36px;
+   padding: 38px 36px;
    background: #111;
    text-align: left;
 }
