--- a/css/layout.css
+++ b/css/layout.css
@@ -33,9 +33,9 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: #161415 url(../images/header-background.gif) no-repeat top center;
-   background-size: cover !important;
-	-webkit-background-size: cover !important;
+   background: #161415 url(../images/header-background.gif) no-repeat center ;
+   background-size:cover !important;
+	-webkit-background-size:cover !important;
    text-align: center;
    overflow: hidden;
 }
@@ -206,7 +206,10 @@ ul#nav li.current a { color: #0080f0; }
    color: #7A7A7A;
 }
 #about .profile-pic {
+   background: var(--background-image-lazy)  no-repeat center;
    position: relative;
+   --background-image-lazy:url(../images/1000117491.png);
+   background-size: contain !important;
    width: 120px;
    height: 120px;
    border-radius: 100%;
